@@ -18,6 +18,7 @@ New features, enhancements:
 
 Bug fixes:
   * Fixed exception when right-clicking in CatergoriesEditor
+  * When 'ends today' start time can't be > now, anymore
 
 
 
